<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KeyCardApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <color name="Red">#ff0000</color>
    <color name="background">#000000</color>
    <color name="whiteText">#ffffff</color>
    <color name="grassColor">#39b54a</color>
    <color name="transparent">#ffffffff</color>

    <string name="list_empty">Large Text</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Password</string>
    <string name="username">Username:</string>
    <string name="login">Log in</string>
    <string name="newUser">New User</string>
    <string name="new_card">New Card</string>
    <string name="title_activity_create_new_card">CreateNewCardActivity</string>
    <string name="card_name">Card Name</string>

    <color name="skyblue">#00aeef</color>

    <string name="valid">Valid: 10days</string>
    <string name="expires">Set expire date:</string>
    <string name="title_activity_create_new_user">CreateNewUserActivity</string>
    <string name="confirm_password">Confirm</string>
    <string name="sign_up">Sign up</string>
    <string name="setLayout">Set row icon:</string>
    <string name="title_activity_share_card">ShareCardActivity</string>
    <string name="friendName">"Share to user: "</string>
    <string name="share">Share card</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_scan_card">ScanCardActivity</string>

</resources>