<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginScreen"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/grassColor" >

    <ImageView
        android:id="@+id/backgroundImageLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitStart"
        android:src="@drawable/top_screen" />

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="300dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/loginTxt"
            android:layout_width="176dp"
            android:layout_height="91dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/login_sign" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/username"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:width="200dp" />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textAllCaps="true" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:width="200dp" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:nextFocusForward="@+id/loginButton" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="10dp" >

            <Button
                android:id="@+id/loginButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="2dip"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="loginButtonAction"
                android:padding="5dp"
                android:text="@string/login"
                android:textColor="@color/whiteText"
                android:textSize="20sp" />

            <Button
                android:id="@+id/newUserButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="2dip"
                android:layout_weight="1"
                android:background="@drawable/round_button"
                android:onClick="newButtonAction"
                android:padding="5dp"
                android:text="@string/newUser"
                android:textColor="@color/whiteText"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>