<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FrameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_new"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom" >

        <ListView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/row_image"
            android:layout_marginTop="20dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="30dp"
            android:footerDividersEnabled="true"
            android:headerDividersEnabled="true"
            tools:listitem="@layout/card_row" >

        </ListView>

        <ImageView
            android:id="@+id/row_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="-2dp"
            android:layout_marginRight="-2dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/footer_straigth" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/footer_img_create_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        android:src="@drawable/sky" android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/list_empty"
        android:textColor="@color/whiteText"
        android:textSize="@dimen/large_text" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

        <Button
            android:id="@+id/new_user_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@drawable/round_button"
            android:onClick="newCard"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/new_card"
            android:textColor="@color/whiteText"
            android:textSize="20sp" />

    </LinearLayout>

</FrameLayout>